calico-policies/public-network-isolation/allow-egress-pods-public.yaml
# This policy opens port 53 for DNS, port 2049 for communication with
# NFS file servers, ports 443 and 3260 for communication to block
# storage, and port 10250 for VPN communication. It also allows pod
# access to other pods.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-public
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.1/32
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.1/32
    protocol: TCP
  - action: Allow
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
