calico-policies/public-network-isolation/allow-private-services.yaml
# This policy allows outgoing network traffic from worker nodes to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.4/32
      - 166.9.22.3/32
      - 166.9.24.2/32
      # IBM Cloud Container Registry: Example US South & US East nets for your own registry
      - 166.9.12.114/32
      - 166.9.15.50/32
      - 166.9.16.173/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
