calico-policies/public-network-isolation/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of your cluster
# to the cluster master through the public service endpoint. Note that you must allow outgoing
# traffic on TCP/UDP port range 20000-32767 and port 443 for all of the zones within the region.
# The example nets in this policy are for US South.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Example nets for US South
      - 169.45.67.210/32
      - 169.46.7.238/32
      - 169.46.110.218/32
      - 169.47.70.10/32
      - 169.48.143.218/32
      - 169.48.230.146/32
      - 169.57.100.18/32
      - 169.57.151.10/32
      - 169.61.29.194/32
      - 169.62.82.197/32
      - 169.62.166.98/32
      - 169.61.177.2/32
      - 169.60.128.2/32
      - 184.173.44.62/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Example nets for US South
      - 169.45.67.210/32
      - 169.46.7.238/32
      - 169.46.110.218/32
      - 169.47.70.10/32
      - 169.48.143.218/32
      - 169.48.230.146/32
      - 169.57.100.18/32
      - 169.57.151.10/32
      - 169.61.29.194/32
      - 169.62.82.197/32
      - 169.62.166.98/32
      - 169.61.177.2/32
      - 169.60.128.2/32
      - 184.173.44.62/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
