calico-policies/public-network-isolation/deny-all-outbound.yaml
- apiVersion: projectcalico.org/v3
  kind: GlobalNetworkPolicy
  metadata:
    name: deny-all-outbound
  spec:
    egress:
    - action: Deny
      destination: {}
      source: {}
    order: 1850
    selector: ibm.role == 'worker_public'
    types:
    - Egress
